# id-dados-rio

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  manage.py  nginx.conf  pyproject.toml  pytest.ini  start-server.sh
.github/workflows/: cd.yaml
id_dados_rio/: asgi.py  urls.py  wsgi.py
id_dados_rio/auth_rio/: admin.py  apps.py  models.py  utils.py  views.py
id_dados_rio/auth_rio/migrations/: 0001_initial.py
id_dados_rio/settings/: base.py  dev.py  prod.py
id_dados_rio/static/css/: recaptcha.css
